2 design fixes to onboarding, button width on connect step, widget alignment on select widget step

--- a/app/styles/buttons.less
+++ b/app/styles/buttons.less
@@ -104,12 +104,6 @@
   }
 }
 
-.button--twitch,
-.button--yt,
-.button--mixer {
-  width: 48%;
-}
-
 .square-button {
   .radius;
   .transition;
